[tool.poetry]
name = "hack-interview"
version = "0.1.0"
description = ""
authors = ["slgero <sersavvov@gmail.com>"]
readme = "README.md"
packages = [{include = "hack_interview"}]

[tool.poetry.dependencies]
python = "^3.10"
soundcard = "^0.4.2"
soundfile = "^0.12.1"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
